# UbuntuReleaseFetcher

./: CMakeLists.txt  README.md
src/: BoostHttpClient.cpp  BoostHttpClient.h  CMakeLists.txt  FileLogger.cpp  FileLogger.h  IHttpClient.h  ILogger.h  IReleaseFetcher.h  UbuntuReleaseFetcher.cpp  UbuntuReleaseFetcher.h  UbuntuReleaseInfo.cpp  UbuntuReleaseInfo.h  main.cpp
test/: CMakeLists.txt  MockHttpClient.h  MockLogger.h  Mocks.h  UbuntuReleaseFetcherTest.cpp
test/testData/: TD_InvalidReleaseInfo.json  TD_LoadValidReleaseInfo.json
